Added packages to the department-management-sytems

--- a/department-management-system/department-management-system/src/main/resources/application.properties
+++ b/department-management-system/department-management-system/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+spring.application.name = department-management-system
+server.port = 8082
+
+
+#h2 database
+#departmentsDB is the name of the database
+spring.datasource.url=jdbc:h2:mem:departmentsDB
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# enabling the embedded GUI console for browsing the contents of the database
+spring.h2.console.enabled =true
+
+#hibernate implemenation of JPA (Java persistence API) - ensures that data is stored/retrieved from the database based on the mappings
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect  
+spring.jpa.properties.hibernate.format_sql=true  
+spring.jpa.properties.hibernate.show_sql=true  
+spring.jpa.hibernate.ddl-auto=update
+
 
