--- a/employees-management-system/employees-management-system/src/test/java/resources/application.properties
+++ b/employees-management-system/employees-management-system/src/test/java/resources/application.properties
@@ -1,22 +1,16 @@
 spring.application.name = Employee-Management-System  
 server.port = 8081
 
-#update-automatically create table if it does not exist. Can also use create, create-drop, etc
-spring.jpa.hibernate.ddl-auto=update 
+#create and then destroy the schema at the end of the session
+spring.jpa.hibernate.ddl-auto=create-drop
 
-#MySQL database
-spring.datasource.url=jdbc:mysql://localhost:3306/employeesDB
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+#H2 database
+spring.datasource.url=jdbc:h2:mem:employees;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# enabling the embedded GUI console for browsing the contents of the database
+spring.h2.console.enabled =true
 
-spring.jpa.properties.hibernate.check_nullability=true
-#hibernate
-
-
-#dialect - gives information to the framework of how to convert hibernate queries(HQL) into native SQL queries.
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
-
+spring.jpa.show-sql=true
